--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Umino</title>
-
     <link rel="stylesheet" href="style.css"/>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jost&display=swap"
-      rel="stylesheet"/>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"/>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet"/>
+    <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -51,14 +43,14 @@
       <div class="" id="header-menu">
         <div class="navbar">
           <div class="logo">
-            <a href=""><img src="uploads/Logo.png" alt=""/></a>
+            <a href=""><img src="uploads/Logo.png" alt=""></a>
           </div>
 
           <div class="menu">
             <div class="dropdown">
               <button class="dropbtn">
                 Home
-                <i class="fa-solid fa-angle-down"></i>
+                <i class=" fa-solid fa-angle-down"></i>
               </button>
               <div class="dropdown-content">
                 <a href="#">Home 1</a>
@@ -203,7 +195,7 @@
 
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png"/>
+        <img src="uploads/slider/bg.png">
         <div class="text">
           <h1>
             Stylish <br/>
@@ -214,7 +206,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png"/>
+        <img src="uploads/slider/bg.png">
         <div class="text">
           <h1>
             Stylish <br/>
@@ -225,7 +217,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png"/>
+        <img src="uploads/slider/bg.png">
         <div class="text">
           <h1>
             Stylish <br/>
@@ -251,27 +243,27 @@
 
     <div class="categories">
       <div class="categories-left">
-        <img src="uploads/categories/bg1.png" alt=""/>
+        <img src="uploads/categories/bg1.png" alt="">
         <div>
           <button>Tops</button>
         </div>
       </div>
       <div class="categories-center">
         <div class="categories-center-top">
-          <img src="uploads/categories/bg2.png" alt=""/>
+          <img src="uploads/categories/bg2.png" alt="">
           <div>
             <button>Sunglasses</button>
           </div>
         </div>
         <div style="display: flex">
           <div class="categories-center-bottom-left">
-            <img src="uploads/categories/bg3.png" alt=""/>
+            <img src="uploads/categories/bg3.png" alt="">
             <div>
               <button>Sandals</button>
             </div>
           </div>
           <div class="categories-center-bottom-right">
-            <img src="uploads/categories/bg4.png" alt=""/>
+            <img src="uploads/categories/bg4.png" alt="">
             <div>
               <button>Bags</button>
             </div>
@@ -279,7 +271,7 @@
         </div>
       </div>
       <div class="categories-right">
-        <img src="uploads/categories/bg5.png" alt=""/>
+        <img src="uploads/categories/bg5.png" alt="">
         <div>
           <button>Sneaker</button>
         </div>
@@ -297,17 +289,9 @@
         <div class="top-trending-products">
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/img.png" class="image" alt=""/>
-              <img
-                src="uploads/products/bg6.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/bg7.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/img.png" class="image" alt="">
+              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button></button>
                 <button></button>
@@ -338,17 +322,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg7.png" class="image" alt=""/>
-              <img
-                src="uploads/products/bg6.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/img.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg7.png" class="image" alt="">
+              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button>-10%</button>
                 <button>Pre-Order</button>
@@ -385,17 +361,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg6.png" class="image" alt=""/>
-              <img
-                src="uploads/products/img.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/bg7.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg6.png" class="image" alt="">
+              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button></button>
                 <button></button>
@@ -426,17 +394,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg8.png" class="image" alt=""/>
-              <img
-                src="uploads/products/bg6.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/bg7.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg8.png" class="image" alt="">
+              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button></button>
                 <button></button>
@@ -470,19 +430,19 @@
 
       <div class="banner">
         <div class="banner-left">
-          <img src="uploads/banner/bg9.png" alt=""/>
+          <img src="uploads/banner/bg9.png" alt="">
           <p>Set Nightwear</p>
           <p>Explore the Lookbook</p>
           <div class="banner-left-line"></div>
         </div>
         <div class="banner-center">
-          <img src="uploads/banner/bg10.png" alt=""/>
+          <img src="uploads/banner/bg10.png" alt="">
           <p>Handbag Style</p>
           <p>Explore the Lookbook</p>
           <div class="banner-center-line"></div>
         </div>
         <div class="banner-right">
-          <img src="uploads/banner/bg11.png" alt=""/>
+          <img src="uploads/banner/bg11.png" alt="">
           <p>Made for Your</p>
           <p>Explore the Lookbook</p>
           <div class="banner-right-line"></div>
@@ -499,17 +459,9 @@
         <div class="top-trending-products">
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg12.png" class="image" alt=""/>
-              <img
-                src="uploads/products/bg6.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/bg7.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg12.png" class="image" alt="">
+              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button></button>
                 <button></button>
@@ -541,17 +493,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg13.png" class="image" alt=""/>
-              <img
-                src="uploads/products/bg6.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/img.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg13.png" class="image" alt="">
+              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button></button>
                 <button></button>
@@ -588,17 +532,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg14.png" class="image" alt=""/>
-              <img
-                src="uploads/products/img.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/bg7.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg14.png" class="image" alt="">
+              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button>-10%</button>
                 <button>Pre-Order</button>
@@ -629,17 +565,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg15.png" class="image" alt=""/>
-              <img
-                src="uploads/products/bg6.png"
-                class="image"
-                alt=""
-                style="display: none"/>
-              <img
-                src="uploads/products/bg7.png"
-                class="image"
-                alt=""
-                style="display: none"/>
+              <img src="uploads/products/bg15.png" class="image" alt="">
+              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
                 <button></button>
                 <button></button>
@@ -683,39 +611,39 @@
         </div>
         <div class="shop-instagram-products">
           <div class="instagram-product">
-            <img src="uploads/products/bg16.png" alt=""/>
+            <img src="uploads/products/bg16.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt=""/>
+              <img src="uploads/icon.png" alt="">
             </button>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg21.png" alt=""/>
+            <img src="uploads/products/bg21.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt=""/>
+              <img src="uploads/icon.png" alt="">
             </button>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg17.png" alt=""/>
+            <img src="uploads/products/bg17.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt=""/>
+              <img src="uploads/icon.png" alt="">
             </button>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg18.png" alt=""/>
+            <img src="uploads/products/bg18.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt=""/>
+              <img src="uploads/icon.png" alt="">
             </button>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg19.png" alt=""/>
+            <img src="uploads/products/bg19.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt=""/>
+              <img src="uploads/icon.png" alt="">
             </button>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg20.png" alt=""/>
+            <img src="uploads/products/bg20.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt=""/>
+              <img src="uploads/icon.png" alt="">
             </button>
           </div>
         </div>
@@ -725,18 +653,18 @@
     <footer>
       <div>
         <div class="footer-logo">
-          <img src="uploads/Logo.png" alt=""/>
+          <img src="uploads/Logo.png" alt="">
           <p>268 St, South New York/NY 98944, United States</p>
           <p>+222-1800-2628</p>
           <p class="last">blueskytechcompany@gmail.com</p>
           <div class="footer-logo-icon">
-            <a href=""><img src="uploads/footer/icon1.png" alt=""/></a>
-            <a href=""><img src="uploads/footer/icon2.png" alt=""/></a>
-            <a href=""><img src="uploads/footer/icon3.png" alt=""/></a>
-            <a href=""><img src="uploads/footer/icon4.png" alt=""/></a>
-            <a href=""><img src="uploads/footer/icon5.png" alt=""/></a>
-            <a href=""><img src="uploads/footer/icon6.png" alt=""/></a>
-            <a href=""><img src="uploads/footer/icon7.png" alt=""/></a>
+            <a href=""><img src="uploads/footer/icon1.png" alt=""></a>
+            <a href=""><img src="uploads/footer/icon2.png" alt=""></a>
+            <a href=""><img src="uploads/footer/icon3.png" alt=""></a>
+            <a href=""><img src="uploads/footer/icon4.png" alt=""></a>
+            <a href=""><img src="uploads/footer/icon5.png" alt=""></a>
+            <a href=""><img src="uploads/footer/icon6.png" alt=""></a>
+            <a href=""><img src="uploads/footer/icon7.png" alt=""></a>
           </div>
         </div>
         <div class="footer-categories">
@@ -768,12 +696,8 @@
             Enter your email address to get $10 off your first order and free
             shipping. Updates information on Sales and Offers.
           </p>
-          <form action="">
-            <input
-              type="text"
-              name=""
-              id=""
-              placeholder="Enter your email..."/>
+          <form action="#" method="post">
+            <input type="text" name="email" id="email" placeholder="Enter your email...">
             <button>Subscribe</button>
           </form>
         </div>
@@ -806,13 +730,13 @@
           <p>© 2022 Umino Store. All Rights Reserved.</p>
         </div>
         <div class="payment">
-          <button><img src="uploads/footer/bg22.png" alt=""/></button>
-          <button><img src="uploads/footer/bg23.png" alt=""/></button>
-          <button><img src="uploads/footer/bg24.png" alt=""/></button>
-          <button><img src="uploads/footer/bg25.png" alt=""/></button>
-          <button><img src="uploads/footer/bg26.png" alt=""/></button>
-          <button><img src="uploads/footer/bg27.png" alt=""/></button>
-          <button><img src="uploads/footer/bg28.png" alt=""/></button>
+          <button><img src="uploads/footer/bg22.png" alt=""></button>
+          <button><img src="uploads/footer/bg23.png" alt=""></button>
+          <button><img src="uploads/footer/bg24.png" alt=""></button>
+          <button><img src="uploads/footer/bg25.png" alt=""></button>
+          <button><img src="uploads/footer/bg26.png" alt=""></button>
+          <button><img src="uploads/footer/bg27.png" alt=""></button>
+          <button><img src="uploads/footer/bg28.png" alt=""></button>
         </div>
       </div>
     </footer>
