--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umino</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -177,7 +177,7 @@
 
           <div class="navbar-right">
             <i class="fa-solid fa-magnifying-glass" id="search-icon"></i>
-            <input type="text" id="search-input" placeholder="search..."/>
+            <input type="text" id="search-input" placeholder="search...">
             <i class="fa-regular fa-user"></i>
             <i class="fa-regular fa-clock"></i>
             <div style="position: relative">
@@ -195,10 +195,21 @@
 
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png">
+        <img src="uploads/slider/bg.png" alt="">
         <div class="text">
           <h1>
-            Stylish <br/>
+            Stylish <br>
+            Top Trending
+          </h1>
+          <p>So soft you don't want to take it off.</p>
+          <button>Explore Now</button>
+        </div>
+      </div>
+      <div class="mySlides fade">
+        <img src="uploads/slider/bg.png" alt="">
+        <div class="text">
+          <h1>
+            Stylish <br>
             Top Trending
           </h1>
           <p>So soft you don't want to take it off.</p>
@@ -209,18 +220,7 @@
         <img src="uploads/slider/bg.png">
         <div class="text">
           <h1>
-            Stylish <br/>
-            Top Trending
-          </h1>
-          <p>So soft you don't want to take it off.</p>
-          <button>Explore Now</button>
-        </div>
-      </div>
-      <div class="mySlides fade">
-        <img src="uploads/slider/bg.png">
-        <div class="text">
-          <h1>
-            Stylish <br/>
+            Stylish <br>
             Top Trending
           </h1>
           <p>So soft you don't want to take it off.</p>
@@ -293,8 +293,6 @@
               <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
               <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button></button>
-                <button></button>
               </div>
               <div class="middle">
                 <button><i class="fa-solid fa-cart-plus"></i></button>
@@ -305,7 +303,7 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span> $<span>150.00</span> </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -338,13 +336,10 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span>
                 <span style="color: #d73f0f">$<span>150.00</span></span>
-                <span
-                  style="color: #999999; text-decoration: line-through 1.5px"
-                  >$<span>490.00</span></span
-                >
+                <span style="color: #999999; text-decoration: line-through 1.5px">$<span>490.00</span></span>
               </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -365,8 +360,6 @@
               <img src="uploads/products/img.png" class="image" alt="" style="display: none">
               <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button></button>
-                <button></button>
               </div>
               <div class="middle">
                 <button><i class="fa-solid fa-cart-plus"></i></button>
@@ -377,7 +370,7 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span> $<span>150.00</span> </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -398,8 +391,6 @@
               <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
               <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button></button>
-                <button></button>
               </div>
               <div class="middle">
                 <button><i class="fa-solid fa-cart-plus"></i></button>
@@ -410,7 +401,7 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span> $<span>145.00</span> - $<span>169.00</span> </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -476,7 +467,7 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span> $<span>150.00</span> </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -497,8 +488,6 @@
               <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
               <img src="uploads/products/img.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button></button>
-                <button></button>
               </div>
               <div class="middle">
                 <button><i class="fa-solid fa-cart-plus"></i></button>
@@ -509,13 +498,10 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span>
                 <span style="color: #d73f0f">$<span>150.00</span></span>
-                <span
-                  style="color: #999999; text-decoration: line-through 1.5px"
-                  >$<span>490.00</span></span
-                >
+                <span style="color: #999999; text-decoration: line-through 1.5px">$<span>490.00</span></span>
               </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -548,7 +534,7 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span> $<span>150.00</span> </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -569,8 +555,6 @@
               <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
               <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button></button>
-                <button></button>
               </div>
               <div class="middle">
                 <button><i class="fa-solid fa-cart-plus"></i></button>
@@ -581,7 +565,7 @@
               <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i
               ><i class="fa-solid fa-star"></i>
-              <br/>
+              <br>
               <span> $<span>145.00</span> - $<span>169.00</span> </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -598,9 +582,7 @@
           </div>
         </div>
       </div>
-
-      <hr class="hr-desktop hr-mb"/>
-
+      <hr class="hr-desktop hr-mb">
       <div class="shop-instagram">
         <div class="top-trending-title">
           <h1>Shop by Gram</h1>
@@ -702,9 +684,7 @@
           </form>
         </div>
       </div>
-
-      <hr class="hr-footer hr-mb"/>
-
+      <hr class="hr-footer hr-mb">
       <div class="footer-bottom">
         <div class="footer-bottom-left">
           <div class="dropdown">
