--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png">
+        <img src="uploads/slider/bg.png" alt="">
         <div class="text">
           <h1>
             Stylish <br>
