--- a/index.html
+++ b/index.html
@@ -595,37 +595,37 @@
           <div class="instagram-product">
             <img src="uploads/products/bg16.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.png" style="width: 100%;" alt="">
             </button>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg21.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.png" style="width: 100%;" alt="">
             </button>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg17.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.png" style="width: 100%;" alt="">
             </button>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg18.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.png" style="width: 100%;" alt="">
             </button>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg19.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.png" style="width: 100%;" alt="">
             </button>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg20.png" alt="">
             <button>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.png" style="width: 100%;" alt="">
             </button>
           </div>
         </div>
@@ -710,18 +710,17 @@
           <p>© 2022 Umino Store. All Rights Reserved.</p>
         </div>
         <div class="payment">
-          <button><img src="uploads/footer/bg22.png" alt=""></button>
-          <button><img src="uploads/footer/bg23.png" alt=""></button>
-          <button><img src="uploads/footer/bg24.png" alt=""></button>
-          <button><img src="uploads/footer/bg25.png" alt=""></button>
-          <button><img src="uploads/footer/bg26.png" alt=""></button>
-          <button><img src="uploads/footer/bg27.png" alt=""></button>
-          <button><img src="uploads/footer/bg28.png" alt=""></button>
+          <button><img src="uploads/footer/bg22.png" style="width: 100%;" alt=""></button>
+          <button><img src="uploads/footer/bg23.png" style="width: 100%;" alt=""></button>
+          <button><img src="uploads/footer/bg24.png" style="width: 100%;" alt=""></button>
+          <button><img src="uploads/footer/bg25.png" style="width: 100%;" alt=""></button>
+          <button><img src="uploads/footer/bg26.png" style="width: 100%;" alt=""></button>
+          <button><img src="uploads/footer/bg27.png" style="width: 100%;" alt=""></button>
+          <button><img src="uploads/footer/bg28.png" style="width: 100%;" alt=""></button>
         </div>
       </div>
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="home.js"></script>
   </body>
 </html>
