--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
               <a href="#" aria-label="Điều hướng đến trang chính">Buy Umino!</a>
             </div>
           </div>
-          <button class="icon" onclick="toggleMenu()">
+          <div class="icon" onclick="toggleMenu()">
             <i class="fa-solid fa-bars"></i>
-          </button>
+          </div>
           <div class="menu-mb" id="menu">
             <div class="">
               <button class="">
@@ -352,7 +352,7 @@
               <br>
               <span>
                 <span style="color: #d73f0f">$<span>150.00</span></span>
-                <span style="color: #999999; text-decoration: line-through 1.5px">$<span>490.00</span></span>
+                <span style="color: #555555; text-decoration: line-through 1.5px">$<span>490.00</span></span>
               </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
