--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
               <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
               <img src="uploads/products/img.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button>-10%</button>
-                <button>Pre-Order</button>
+                <div>-10%</div>
+                <div>Pre-Order</div>
               </div>
               <div class="middle">
                 <i class="fa-solid fa-cart-plus"></i>
@@ -467,9 +467,9 @@
               <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
               <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button></button>
-                <button></button>
-                <button>Sold Out</button>
+                <div></div>
+                <div></div>
+                <div>Sold Out</div>
               </div>
               <div class="middle">
                 <i class="fa-solid fa-cart-plus"></i>
@@ -535,8 +535,8 @@
               <img src="uploads/products/img.png" class="image" alt="" style="display: none">
               <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
               <div class="sale">
-                <button>-10%</button>
-                <button>Pre-Order</button>
+                <div>-10%</div>
+                <div>Pre-Order</div>
               </div>
               <div class="middle">
                 <i class="fa-solid fa-cart-plus"></i>
@@ -701,7 +701,7 @@
       <div class="footer-bottom">
         <div class="footer-bottom-left">
           <div class="dropdown">
-            <button class="dropbtn">
+            <button class="dropbtn" style="color: #555555;">
               English
               <i class="fa-solid fa-angle-down"></i>
             </button>
@@ -710,7 +710,7 @@
             </div>
           </div>
           <div class="dropdown">
-            <button class="dropbtn">
+            <button class="dropbtn" style="color: #555555;">
               United States (USD $)
               <i class="fa-solid fa-angle-down"></i>
             </button>
