--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="" id="header-menu">
         <div class="navbar">
           <div class="logo">
-            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.png" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.png" alt="" style="width: 92px; height: 20px;"></a>
           </div>
 
           <div class="menu">
@@ -608,37 +608,37 @@
           <div class="instagram-product">
             <img src="uploads/products/bg16.png" alt="">
             <div>
-              <img src="uploads/icon.png" style="width: 100%;" alt="">
+              <img src="uploads/icon.png" alt="">
             </div>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg21.png" alt="">
             <div>
-              <img src="uploads/icon.png" style="width: 100%;" alt="">
+              <img src="uploads/icon.png" alt="">
             </div>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg17.png" alt="">
             <div>
-              <img src="uploads/icon.png" style="width: 100%;" alt="">
+              <img src="uploads/icon.png" alt="">
             </div>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg18.png" alt="">
             <div>
-              <img src="uploads/icon.png" style="width: 100%;" alt="">
+              <img src="uploads/icon.png" alt="">
             </div>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg19.png" alt="">
             <div>
-              <img src="uploads/icon.png" style="width: 100%;" alt="">
+              <img src="uploads/icon.png" alt="">
             </div>
           </div>
           <div class="instagram-product">
             <img src="uploads/products/bg20.png" alt="">
             <div>
-              <img src="uploads/icon.png" style="width: 100%;" alt="">
+              <img src="uploads/icon.png" alt="">
             </div>
           </div>
         </div>
@@ -648,7 +648,9 @@
     <footer>
       <div>
         <div class="footer-logo">
-          <img src="uploads/Logo.png" alt="">
+          <div class="logo">
+            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.png" alt="" style="width: 92px; height: 20px;"></a>
+          </div>
           <p>268 St, South New York/NY 98944, United States</p>
           <p>+222-1800-2628</p>
           <p class="last">blueskytechcompany@gmail.com</p>
@@ -723,13 +725,13 @@
           <p>© 2022 Umino Store. All Rights Reserved.</p>
         </div>
         <div class="payment">
-          <div><img src="uploads/footer/bg22.png" style="width: 100%;" alt=""></div>
-          <div><img src="uploads/footer/bg23.png" style="width: 100%;" alt=""></div>
-          <div><img src="uploads/footer/bg24.png" style="width: 100%;" alt=""></div>
-          <div><img src="uploads/footer/bg25.png" style="width: 100%;" alt=""></div>
-          <div><img src="uploads/footer/bg26.png" style="width: 100%;" alt=""></div>
-          <div><img src="uploads/footer/bg27.png" style="width: 100%;" alt=""></div>
-          <div><img src="uploads/footer/bg28.png" style="width: 100%;" alt=""></div>
+          <div><img src="uploads/footer/bg22.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg23.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg24.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg25.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg26.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg27.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg28.png" style="width: 100%; height: auto;" alt=""></div>
         </div>
       </div>
     </footer>
