--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="" id="header-menu">
         <div class="navbar">
           <div class="logo">
-            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.png" alt="" style="width: 92px; height: 20px;"></a>
+            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.WebP" alt="" style="width: 92px; height: 20px;"></a>
           </div>
 
           <div class="menu">
@@ -198,7 +198,7 @@
 
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png" alt="">
+        <img src="uploads/slider/bg.WebP" alt="">
         <div class="text">
           <h1>
             Stylish <br>
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png" alt="">
+        <img src="uploads/slider/bg.WebP" alt="">
         <div class="text">
           <h1>
             Stylish <br>
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.png" alt="">
+        <img src="uploads/slider/bg.WebP" alt="">
         <div class="text">
           <h1>
             Stylish <br>
@@ -246,7 +246,7 @@
 
     <div class="categories">
       <div class="categories-left">
-        <img src="uploads/categories/bg1.png" alt="">
+        <img src="uploads/categories/bg1.WebP" alt="">
         <div>
           <div class="href">
             <a href="#" aria-label="Điều hướng đến trang">Tops</a>
@@ -255,7 +255,7 @@
       </div>
       <div class="categories-center">
         <div class="categories-center-top">
-          <img src="uploads/categories/bg2.png" alt="">
+          <img src="uploads/categories/bg2.WebP" alt="">
           <div>
             <div class="href">
               <a href="#" aria-label="Điều hướng đến trang">Sunglasses</a>
@@ -264,7 +264,7 @@
         </div>
         <div style="display: flex">
           <div class="categories-center-bottom-left">
-            <img src="uploads/categories/bg3.png" alt="">
+            <img src="uploads/categories/bg3.WebP" alt="">
             <div>
               <div class="href">
                 <a href="#" aria-label="Điều hướng đến trang">Sandals</a>
@@ -272,7 +272,7 @@
             </div>
           </div>
           <div class="categories-center-bottom-right">
-            <img src="uploads/categories/bg4.png" alt="">
+            <img src="uploads/categories/bg4.WebP" alt="">
             <div>
               <div class="href">
                 <a href="#" aria-label="Điều hướng đến trang">Bags</a>
@@ -282,7 +282,7 @@
         </div>
       </div>
       <div class="categories-right">
-        <img src="uploads/categories/bg5.png" alt="">
+        <img src="uploads/categories/bg5.WebP" alt="">
         <div>
           <div class="href">
             <a href="#" aria-label="Điều hướng đến trang">Sneaker</a>
@@ -302,9 +302,9 @@
         <div class="top-trending-products">
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/img.png" class="image" alt="">
-              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/img.WebP" class="image" alt="">
+              <img src="uploads/products/bg6.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="" style="display: none">
               <div class="sale">
               </div>
               <div class="middle">
@@ -333,9 +333,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg7.png" class="image" alt="">
-              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="">
+              <img src="uploads/products/bg6.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/img.WebP" class="image" alt="" style="display: none">
               <div class="sale">
                 <div>-10%</div>
                 <div>Pre-Order</div>
@@ -369,9 +369,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg6.png" class="image" alt="">
-              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg6.WebP" class="image" alt="">
+              <img src="uploads/products/img.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="" style="display: none">
               <div class="sale">
               </div>
               <div class="middle">
@@ -400,9 +400,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg8.png" class="image" alt="">
-              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg8.WebP" class="image" alt="">
+              <img src="uploads/products/bg6.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="" style="display: none">
               <div class="sale">
               </div>
               <div class="middle">
@@ -434,19 +434,19 @@
 
       <div class="banner">
         <div class="banner-left">
-          <img src="uploads/banner/bg9.png" alt="">
+          <img src="uploads/banner/bg9.WebP" alt="">
           <p>Set Nightwear</p>
           <p>Explore the Lookbook</p>
           <div class="banner-left-line"></div>
         </div>
         <div class="banner-center">
-          <img src="uploads/banner/bg10.png" alt="">
+          <img src="uploads/banner/bg10.WebP" alt="">
           <p>Handbag Style</p>
           <p>Explore the Lookbook</p>
           <div class="banner-center-line"></div>
         </div>
         <div class="banner-right">
-          <img src="uploads/banner/bg11.png" alt="">
+          <img src="uploads/banner/bg11.WebP" alt="">
           <p>Made for Your</p>
           <p>Explore the Lookbook</p>
           <div class="banner-right-line"></div>
@@ -463,9 +463,9 @@
         <div class="top-trending-products">
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg12.png" class="image" alt="">
-              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg12.WebP" class="image" alt="">
+              <img src="uploads/products/bg6.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="" style="display: none">
               <div class="sale">
                 <div></div>
                 <div></div>
@@ -497,9 +497,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg13.png" class="image" alt="">
-              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg13.WebP" class="image" alt="">
+              <img src="uploads/products/bg6.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/img.WebP" class="image" alt="" style="display: none">
               <div class="sale">
               </div>
               <div class="middle">
@@ -514,7 +514,7 @@
               <br>
               <span>
                 <span style="color: #d73f0f">$<span>150.00</span></span>
-                <span style="color: #999999; text-decoration: line-through 1.5px">$<span>490.00</span></span>
+                <span style="color: #555555; text-decoration: line-through 1.5px">$<span>490.00</span></span>
               </span>
               <div style="display: flex">
                 <div class="color-bark focus" data-img-index="0">
@@ -531,9 +531,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg14.png" class="image" alt="">
-              <img src="uploads/products/img.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg14.WebP" class="image" alt="">
+              <img src="uploads/products/img.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="" style="display: none">
               <div class="sale">
                 <div>-10%</div>
                 <div>Pre-Order</div>
@@ -564,9 +564,9 @@
           </div>
           <div class="products">
             <div class="products-img">
-              <img src="uploads/products/bg15.png" class="image" alt="">
-              <img src="uploads/products/bg6.png" class="image" alt="" style="display: none">
-              <img src="uploads/products/bg7.png" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg15.WebP" class="image" alt="">
+              <img src="uploads/products/bg6.WebP" class="image" alt="" style="display: none">
+              <img src="uploads/products/bg7.WebP" class="image" alt="" style="display: none">
               <div class="sale">
               </div>
               <div class="middle">
@@ -606,39 +606,39 @@
         </div>
         <div class="shop-instagram-products">
           <div class="instagram-product">
-            <img src="uploads/products/bg16.png" alt="">
+            <img src="uploads/products/bg16.WebP" alt="">
             <div>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.WebP" alt="">
             </div>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg21.png" alt="">
+            <img src="uploads/products/bg21.WebP" alt="">
             <div>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.WebP" alt="">
             </div>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg17.png" alt="">
+            <img src="uploads/products/bg17.WebP" alt="">
             <div>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.WebP" alt="">
             </div>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg18.png" alt="">
+            <img src="uploads/products/bg18.WebP" alt="">
             <div>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.WebP" alt="">
             </div>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg19.png" alt="">
+            <img src="uploads/products/bg19.WebP" alt="">
             <div>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.WebP" alt="">
             </div>
           </div>
           <div class="instagram-product">
-            <img src="uploads/products/bg20.png" alt="">
+            <img src="uploads/products/bg20.WebP" alt="">
             <div>
-              <img src="uploads/icon.png" alt="">
+              <img src="uploads/icon.WebP" alt="">
             </div>
           </div>
         </div>
@@ -649,19 +649,19 @@
       <div>
         <div class="footer-logo">
           <div class="logo">
-            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.png" alt="" style="width: 92px; height: 20px;"></a>
+            <a href="#" aria-label="Điều hướng đến trang chính"><img src="uploads/Logo.WebP" alt="" style="width: 92px; height: 20px;"></a>
           </div>
           <p>268 St, South New York/NY 98944, United States</p>
           <p>+222-1800-2628</p>
           <p class="last">blueskytechcompany@gmail.com</p>
           <div class="footer-logo-icon">
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon1.png" alt=""></a>
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon2.png" alt=""></a>
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon3.png" alt=""></a>
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon4.png" alt=""></a>
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon5.png" alt=""></a>
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon6.png" alt=""></a>
-            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon7.png" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon1.WebP" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon2.WebP" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon3.WebP" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon4.WebP" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon5.WebP" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon6.WebP" alt=""></a>
+            <a href="#" aria-label="Điều hướng đến trang"><img src="uploads/footer/icon7.WebP" alt=""></a>
           </div>
         </div>
         <div class="footer-categories">
@@ -725,13 +725,13 @@
           <p>© 2022 Umino Store. All Rights Reserved.</p>
         </div>
         <div class="payment">
-          <div><img src="uploads/footer/bg22.png" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg23.png" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg24.png" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg25.png" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg26.png" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg27.png" style="width: 100%; height: auto;" alt=""></div>
-          <div><img src="uploads/footer/bg28.png" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg22.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg23.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg24.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg25.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg26.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg27.WebP" style="width: 100%; height: auto;" alt=""></div>
+          <div><img src="uploads/footer/bg28.WebP" style="width: 100%; height: auto;" alt=""></div>
         </div>
       </div>
     </footer>
