--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5ce6811c48.js" crossorigin="anonymous"></script>
-</head>
+  </head>
   <body>
     <header>
       <div class="top-header">
@@ -198,7 +198,7 @@
 
     <div class="slideshow-container">
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.WebP" alt="">
+        <img src="uploads/slider/slide.webp" alt="">
         <div class="text">
           <h1>
             Stylish <br>
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.WebP" alt="">
+        <img src="uploads/slider/slide.webp" alt="">
         <div class="text">
           <h1>
             Stylish <br>
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="mySlides fade">
-        <img src="uploads/slider/bg.WebP" alt="">
+        <img src="uploads/slider/slide.webp" alt="">
         <div class="text">
           <h1>
             Stylish <br>
